refactor: 修复IDE报告的代码质量问题